# Mesters-ges-inteligencia-beadand-1---EWUXA6

./: .gitignore  PROMPTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: classroom.yml
src/graph_search.egg-info/: PKG-INFO  SOURCES.txt
src/search/: __init__.py  graph.py
src/search/algorithms/: __init__.py  astar.py  beam.py  best_first.py  bfs.py  branch_and_bound.py  dfs.py  graph_search.py  hill_climbing.py
tests/: __init__.py  algorithm_registry.py  conftest.py  graphtest_results.ipynb  results.json  test_graph_search.py
tests/resources/: graphs.json
